Add Streamlit interface

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 API_KEY = your-api-key-here
+LANGSMITH_API_KEY = your-langsmith-api-key-here
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT=https://api.smith.langchain.com
+LANGSMITH_PROJECT=LangGraph-MCP-Agents
